--- a/gemstore.html
+++ b/gemstore.html
@@ -11,7 +11,7 @@
 				<li class="list-group-item" ng-repeat="product in store.products">
 					<h3>
 						{{product.name}}
-						<em class="pull-right">{{product.price}}</em>
+						<em class="pull-right">${{product.price}}</em>
 					</h3>
 				</li>
 			</ul>
