added ng-click tabs

--- a/gemstore.html
+++ b/gemstore.html
@@ -15,5 +15,13 @@
 					</h3>
 				</li>
 			</ul>
+
+			<section>
+				<ul class="nav nav-pills">
+					<li><a href ng-click="tab = 1">Description</a></li>
+					<li><a href ng-click="tab = 2">Specifications</a></li>
+					<li><a href ng-click="tab = 3">Reviews</a></li
+				</ul>
+				{{tab}}
 	</body>
 </html>
