Re-baselined prior to start of forms module

--- a/gemstore.html
+++ b/gemstore.html
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
-<html ng-app="store">
-	<head>
-		<link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-	</head>
-	<body ng-controller='StoreController as store'>
-		<script type="text/javascript" src="./bower_components/angularjs/angular.min.js"></script>
-		<script type="text/javascript" src="./app.js"></script>
-
-			<ul class="list-group">
-				<li class="list-group-item" ng-repeat="product in store.products">
-					<h3>
-						{{product.name}}
-						<em class="pull-right">{{product.price | currency}}</em>
-					</h3>
-					<section ng-controller="PanelController as panel">
-						<ul class="nav nav-pills">
-							<li ng-class="{active:panel.isSelected(1)}"><a href ng-click=panel.selectTab(1)>Description</a></li>
-							<li ng-class="{active:panel.isSelected(2)}"><a href ng-click=panel.selectTab(2)>Specifications</a></li>
-							<li ng-class="{active:panel.isSelected(3)}"><a href ng-click=panel.selectTab(3)>Reviews</a></li
-						</ul>
-
-						<div class="panel" ng-show=panel.isSelected(1)>
-							<h4>Description</h4>
-							<p>{{product.description}}</p>
-						</div>
-						<div class="panel" ng-show=panel.isSelected(2)>
-							<h4>Specifications</h4>
-							<blockquote>None yet</blockquote>
-						</div>
-						<div class="panel" ng-show=panel.isSelected(3)>
-							<h4>Reviews</h4>
-							<blockquote>None yet</blockquote>
-						</div>
-					</section>
-
-				</li>
-			</ul>
+<html lang="en" ng-app="store">
+<head>
+  <meta charset="UTF-8">
+  <title> AngularJS Example Store </title>
+  <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+</head>
+<body class="container">
+  <ul class="products list-unstyled" ng-controller="StoreController as store">
+    <li ng-repeat="product in store.products">
+      <h3> {{product.name}} <em class="pull-right">{{product.price | currency}}</em> </h3>
 
 
-	</body>
+
+      <section class="panels" ng-controller="PanelController as panels">
+        <ul class="nav nav-pills">
+          <li ng-class="{active:panel.isSelected(1)}"><a href ng-click="panels.setCurrent(1)">Description</a></li>
+          <li ng-class="{active:panel.isSelected(2)}"><a href ng-click="panels.setCurrent(2)">Specifications</a></li>
+          <li ng-class="{active:panel.isSelected(3)}"><a href ng-click="panels.setCurrent(3)">Reviews</a></li>
+        </ul>
+        <div class="panel" ng-show="panels.isCurrent(1)">
+          <h4> Description </h4>
+					<p>{{product.description}}
+        </div>
+        <div class="panel" ng-show="panels.isCurrent(2)">
+          <h4> Specifications </h4>
+        </div>
+        <div class="panel" ng-show="panels.isCurrent(3)">
+          <h4> Reviews </h4>
+
+          <div ng-init="discussion.reviews = product.reviews">
+            <blockquote class="review" ng-repeat="review in product.reviews">
+              {{review.body}}
+              <cite>by: {{review.author}}</cite>
+            </blockquote>
+
+						
+
+          </div>
+        </div>
+      </section> <!-- class="panels" -->
+    </li>
+  </ul> <!-- class="products" -->
+  <script type="text/javascript" src="./bower_components/angularjs/angular.min.js"></script>
+	<script type="text/javascript" src="./app.js"></script>
+</body>
 </html>
