--- a/gemstore.html
+++ b/gemstore.html
@@ -13,64 +13,10 @@
     <li ng-repeat="product in store.products">
       <h3><product-title></product-title></h3>
 
+        <product-panels>
+        </product-panels>
 
 
-      <section class="panels" ng-controller="PanelController as panels">
-        <ul class="nav nav-pills">
-          <li ng-class="{active:panel.isSelected(1)}"><a href ng-click="panels.setCurrent(1)">Description</a></li>
-          <li ng-class="{active:panel.isSelected(2)}"><a href ng-click="panels.setCurrent(2)">Specifications</a></li>
-          <li ng-class="{active:panel.isSelected(3)}"><a href ng-click="panels.setCurrent(3)">Reviews</a></li>
-        </ul>
-        <div class="panel" ng-show="panels.isCurrent(1)">
-          <h4> Description </h4>
-					<p>{{product.description}}
-        </div>
-        <div class="panel" ng-show="panels.isCurrent(2)">
-          <h4> Specifications </h4>
-        </div>
-        <div class="panel" ng-show="panels.isCurrent(3)">
-          <h4> Reviews </h4>
-
-          <div>
-            <blockquote class="review" ng-repeat="review in product.reviews">
-              {{review.body}}
-              <cite>by: {{review.author}}</cite>
-            </blockquote>
-
-						<form name="reviewForm" class="form-horizontal"
-							ng-controller="ReviewController as reviewCtrl" ng-submit="reviewForm.$valid && reviewCtrl.addReview(product)" novalidate>
-							<blockquote>
-								<b>Stars: {{reviewCtrl.review.stars}}</b>
-								{{reviewCtrl.review.body}}
-								<cite>by: {{reviewCtrl.review.author}}</cite>
-							</blockquote>
-							<h4>Submit a Review</h4>
-							<fieldset class="form-group">
-								<select class="form-control" ng-model="reviewCtrl.review.stars" title="Stars" required>
-									<option value="1">1 star</option>
-									<option value="2">2 stars</option>
-									<option value="3">3 stars</option>
-									<option value="4">4 stars</option>
-									<option value="5">5 stars</option>
-								</select>
-							</fieldset>
-							<fieldset class="form-group">
-								<textarea class="form-control" placeholder="Write a short review of the product..."
-									title="Review" ng-model="reviewCtrl.review.body" required></textarea>
-							</fieldset>
-							<fieldset class="form-group">
-								<input type="email" class="form-control" placeholder="flibby@foo.org" title="Email"
-									ng-model="reviewCtrl.review.author" required/>
-							</fieldset>
-							<div>reviewForm is {{reviewForm.$valid}} </div>
-							<fieldset class="form-group">
-								<input type="submit" class="btn btn-primary pull-right"  value="Submit Review" />
-							</fieldset>
-						</form>
-
-          </div>
-        </div>
-      </section> <!-- class="panels" -->
     </li>
   </ul> <!-- class="products" -->
   <script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
