Factored out the directive into its own module

--- a/gemstore.html
+++ b/gemstore.html
@@ -21,5 +21,6 @@
   </ul> <!-- class="products" -->
   <script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
 	<script type="text/javascript" src="./app.js"></script>
+  <script type="text/javascript" src="./products.js"></script>
 </body>
 </html>
